--- a/distro/openmora-pkgs.yaml
+++ b/distro/openmora-pkgs.yaml
@@ -27,3 +27,5 @@ ual-ecar-pkg:
 vision-pkg:
   git-url: https://github.com/OpenMORA/vision-pkg.git
 
+viz-pkg:  
+  git-url: https://github.com/OpenMORA/viz-pkg.git
