--- a/distro/openmora-pkgs.yaml
+++ b/distro/openmora-pkgs.yaml
@@ -34,6 +34,9 @@ ual-ecar-pkg:
 uma-hw-pkg:
   git-url: https://github.com/OpenMORA/uma-hw-pkg.git
 
+ual-multibody-pkg: 
+  git-url: https://github.com/OpenMORA/ual-multibody-pkg.git
+
 uma-nav-slam-pkg:
   git-url: https://github.com/OpenMORA/uma-nav-slam-pkg.git
 
